add PR comments * also more info I forgot to talk about